Changed title types

--- a/index.html
+++ b/index.html
@@ -449,60 +449,7 @@
         </section>
     </main>
 
-    <footer>
-        <section class="contacts">
-            <div>
-                <h3>Write us</h3>
-                <h1>Contacts</h1>
-            </div>
-            <div>
-                <a href="number" class="button">+1(234) 567 89 00</a>
-            </div>
-            <div>
-                <a href="mail" class="button">coffeelab@emal.com</a>
-            </div>
-        </section>
-        <section class="contact input">
-            <form action="" method="">
-                <input type="text" name="full-name" required placeholder="Full Name*">
-                <input type="text" name="phone numbr" required placeholder="Phone Number*">
-                <input type="email" name="email" required placeholder="Email*">
-                <input type="text" name="course" required placeholder="Course*">
-                <input type="submit" value="Send">
-            </form>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d533.9195335179115!2d-122.43558443114438!3d37.76600783303852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7e1d4afea219%3A0x329b14af40013c03!2zMTc1IENhc3RybyBTdCwgU2FuIEZyYW5jaXNjbywgQ0EgOTQxMTQsINCh0L_QvtC70YPRh9C10L3RliDQqNGC0LDRgtC4INCQ0LzQtdGA0LjQutC4!5e0!3m2!1suk!2sua!4v1662901398256!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>               
-       </section>
-       <section class="contact detales">
-            <div>
-                <h1>OPENING HOURS</h1>
-                <p>Monday-Saturday: 11am-9pm</p>
-                <p>Sunday: 11am-7pm</p>
-             </div> 
-             <div>
-                <h1>LOCATION</h1>
-                <p>Coffee Lab School, Lilac Street Avenue</p>
-                <p>8, 889859,NY,USA</p>
-             </div>  
-             <div>
-                <h1>ANY QUESTIONS?</h1>
-                <p>You can contact us in any convinient way or read our FAQ</p>
-             </div>
-
-       </section>
-       <section class="underlines">
-            <div>
-                <a href="main-page" class="button"><h1>COFFEE LAB SCHOOL</h1><p>MASTER YOUR COFFEE SKILLS</p></a>
-            </div>
-            <a href="about us" class="button">About us</a>
-            <a href="courses" class="button">Courses</a>
-            <a href="prising" class="button">Prising</a>
-            <a href="recipes" class="button">Recipies</a>
-            <a href="testimonials" class="button">Testimonials</a>
-            <a href="blog" class="button">Blog</a>
-            
-
-       </section>
-    </footer>
+   
     <!-- Harasym Nazar-->
 
     <!-- Oleksii Ostapiuk -->
@@ -598,6 +545,68 @@
         </div>
         </div>
     </section>
+
+      <!-- Harasym Nazar-->
+      <footer>
+        <section class="contacts">
+            <div>
+                <h3>Write us</h3>
+                <h2>Contacts</h2>
+            </div>
+            <div>
+                <a href="number" class="button">+1(234) 567 89 00</a>
+            </div>
+            <div>
+                <a href="mail" class="button">coffeelab@emal.com</a>
+            </div>
+        </section>
+        <section class="contact__input">
+            <form action="" method="">
+                <input type="text" name="full-name" required placeholder="Full Name*">
+                <input type="text" name="phone numbr" required placeholder="Phone Number*">
+                <input type="email" name="email" required placeholder="Email*">
+                <input type="text" name="course" required placeholder="Course*">
+                <input type="submit" value="Send">
+            </form>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d533.9195335179115!2d-122.43558443114438!3d37.76600783303852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7e1d4afea219%3A0x329b14af40013c03!2zMTc1IENhc3RybyBTdCwgU2FuIEZyYW5jaXNjbywgQ0EgOTQxMTQsINCh0L_QvtC70YPRh9C10L3RliDQqNGC0LDRgtC4INCQ0LzQtdGA0LjQutC4!5e0!3m2!1suk!2sua!4v1662901398256!5m2!1suk!2sua"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+        <section class="contact detales">
+            <div>
+                <h2>OPENING HOURS</h2>
+                <p>Monday-Saturday: 11am-9pm</p>
+                <p>Sunday: 11am-7pm</p>
+            </div>
+            <div>
+                <h2>LOCATION</h2>
+                <p>Coffee Lab School, Lilac Street Avenue</p>
+                <p>8, 889859,NY,USA</p>
+            </div>
+            <div>
+                <h2>ANY QUESTIONS?</h2>
+                <p>You can contact us in any convinient way or read our FAQ</p>
+            </div>
+
+        </section>
+        <section class="underlines">
+            <div>
+                <a href="main-page" class="button">
+                    <h2>COFFEE LAB SCHOOL</h2>
+                    <p>MASTER YOUR COFFEE SKILLS</p>
+                </a>
+            </div>
+            <a href="about us" class="button">About us</a>
+            <a href="courses" class="button">Courses</a>
+            <a href="prising" class="button">Prising</a>
+            <a href="recipes" class="button">Recipies</a>
+            <a href="testimonials" class="button">Testimonials</a>
+            <a href="blog" class="button">Blog</a>
+
+
+        </section>
+    </footer>
 </body>
 
 </html>
