change section team

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="column_making-learn-more">
                 <h3 class="h3_master_coffee_making">PROFESSIONAL COUSES ARE NOW AVAILABLE FOR ALL COFFEE FANS IN NEW
                     YORK</h3>
-                <hr class="hr_making_team">
+                <hr class="hr_logo_making">
                 <p class="p_making_coffee_fonts">Coffee Lab School is an educational playground for people who cast
                     their lot with coffee. If you own
                     a coffee shop, work as a barista, or you’re just a coffee fan, it is a place where you can learn
@@ -241,7 +241,7 @@
                         will share with you
                         on our course. If you want to make a perfect coffee blend and learn the secrets of delicious
                         coffee, ask Garry.</p>
-                    <a  href="https://facebook.com/"><svg width="30px"
+                    <a href="https://facebook.com/"><svg width="30px"
                             class="si63178d02f12178000d0d231bcollectionitems05c25b21c34f446f2a71dba077190659f1662487817795 svgIcon_1J7 filled_Qbi"
                             viewBox="0 0 32 32">
                             <path class="outer_bDW"
