--- a/index.html
+++ b/index.html
@@ -601,12 +601,12 @@
     <!-- Yevhen Ostrovskyi-->
     <section class="what__our__students__say">
         <div class="testimonials">
-            <h4>Testimonials</h4>
+            <p class="little__title">Testimonials</p>
         </div>
-        <div class="what our students say">
-            <p>What our students say</p>
+        <div class="what__students__say">
+            <h2>WHAT OUR STUDENTS SAY</h2>
         </div>
-        <div class="happy review">
+        <div class="happy__review">
             <p>We are happy with each review you leave.</p>
         </div>
     </section>
