added links to header and id for them

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
                 <img width="150" src="img/logo-barista.svg" alt="logo-barista">
             </div>
             <div class="header__nav">
-                <nav class="nav__links">
+                <nav class="nav__links" id="about__us">
                     <!--change links-->
                     <ul class="header__list">
                         <li>
                             <span>About us
-                                <a class="nav__link" href="#"></a>
+                                <a class="nav__link" href="about__us"></a>
                             </span>
                         </li>
                         <li>
                             <span>Courses
-                                <a class="nav__link" href="#"></a>
+                                <a class="nav__link" href="courses"></a>
                             </span>
                         </li>
                         <li>
@@ -36,12 +36,12 @@
                         </li>
                         <li>
                             <span>Testmonials
-                                <a class="nav__link" href="#"></a>
+                                <a class="nav__link" href="testmonials"></a>
                             </span>
                         </li>
                         <li>
                             <span>Contacts
-                                <a class="nav__link" href="#"></a>
+                                <a class="nav__link" href="contactsgi"></a>
                             </span>
                         </li>
                     </ul>
@@ -116,8 +116,8 @@
 
     <main>
         <!-- Olha Moroz-->
-        <section clas="make-coffe-like-a-pro">
-            <p clas="make-coffe-like-a-pro-title">Courses</p>
+        <section class="make-coffe-like-a-pro" id="courses">
+            <p class="make-coffe-like-a-pro-title">Courses</p>
             <h2 clas="make-coffe-like-a-pro">MAKE COFFEE LIKE A PRO</h2>
             <p>Sign up for one of our professional courses.</p>
 
@@ -599,7 +599,7 @@
     <!-- Oleksii Ostapiuk -->
     <!--Olena Tarasova -->
     <!-- Yevhen Ostrovskyi-->
-    <section class="what__our__students__say">
+    <section class="what__our__students__say" id="testmonials">
         <div class="testimonials">
             <p class="little__title">Testimonials</p>
         </div>
@@ -612,7 +612,7 @@
     </section>
 
     <!-- Tetyana Pasecnhyk-->
-    <section class="about__our__courses">
+    <section class="about__our__courses" id="contacts">
         <div class="dark__filter">
             <div class="about__our__inner">
                 <div class="about__course__info">
