changed links in header

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
                 <img width="150" src="img/logo-barista.svg" alt="logo-barista">
             </div>
             <div class="header__nav">
-                <nav class="nav__links" id="about__us">
+                <nav class="nav__links">
                     <!--change links-->
                     <ul class="header__list">
                         <li>
                             <span>About us
-                                <a class="nav__link" href="about__us"></a>
+                                <a class="nav__link" href="#about__us"></a>
                             </span>
                         </li>
                         <li>
                             <span>Courses
-                                <a class="nav__link" href="courses"></a>
+                                <a class="nav__link" href="#courses"></a>
                             </span>
                         </li>
                         <li>
@@ -36,12 +36,12 @@
                         </li>
                         <li>
                             <span>Testmonials
-                                <a class="nav__link" href="testmonials"></a>
+                                <a class="nav__link" href="#testmonials"></a>
                             </span>
                         </li>
                         <li>
                             <span>Contacts
-                                <a class="nav__link" href="contactsgi"></a>
+                                <a class="nav__link" href="contacts"></a>
                             </span>
                         </li>
                     </ul>
@@ -187,7 +187,7 @@
 
 
         <!-- Natalia Danylovych -->
-        <section class="master-coffe-making">
+        <section class="master-coffe-making" id="about__us">
             <div class="masrer_making_img">
                 <img class="image__making" src="img/master_coffee_making.png" alt="image__making">
             </div>
