changed links in header

--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
                     <!--change links-->
                     <ul class="header__list">
                         <li>
-                            <span>About us
-                                <a class="nav__link" href="#about__us"></a>
+                            <span>
+                                <a class="nav__link" href="#about__us">About us</a>
                             </span>
                         </li>
                         <li>
-                            <span>Courses
-                                <a class="nav__link" href="#courses"></a>
+                            <span>
+                                <a class="nav__link" href="#courses">Courses</a>
                             </span>
                         </li>
                         <li>
                             <a class="nav__link" href="#prising">Prising</a>
                         </li>
                         <li>
-                            <span>Testmonials
-                                <a class="nav__link" href="#testmonials"></a>
+                            <span>
+                                <a class="nav__link" href="#testmonials">Testmonials</a>
                             </span>
                         </li>
                         <li>
-                            <span>Contacts
-                                <a class="nav__link" href="contacts"></a>
+                            <span>
+                                <a class="nav__link" href="contacts">Contacts</a>
                             </span>
                         </li>
                     </ul>
