--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </li>
                         <li>
                             <span>
-                                <a class="nav__link" href="contacts">Contacts</a>
+                                <a class="nav__link" href="#contacts">Contacts</a>
                             </span>
                         </li>
                     </ul>
