--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <!-- Olha Moroz-->
         <section class="make-coffe-like-a-pro" id="courses">
             <p class="make-coffe-like-a-pro-title">Courses</p>
-            <h2 clas="make-coffe-like-a-pro">MAKE COFFEE LIKE A PRO</h2>
+            <h2 class="make-coffe-like-a-pro">MAKE COFFEE LIKE A PRO</h2>
             <p>Sign up for one of our professional courses.</p>
 
             <div class="make-coffe-like-a-pro-courses">
@@ -613,80 +613,78 @@
 
     <!-- Tetyana Pasecnhyk-->
     <section class="about__our__courses" id="contacts">
-        <div class="dark__filter">
-            <div class="about__our__inner">
-                <div class="about__course__info">
-                    <p class="little__title">FAQ</p>
-                    <h2 class="about__title">ABOUT OUR COURSES</h2>
-                    <div class="shot__line"></div>
-                    <p class="about__course__time">We run our courses approximately once in 2-3 months, so be sure to
-                        apply
-                        in
-                        advance.</p>
-                    <p class="about__course__group">Our groups consist of 5-10 people on average. Most courses are held
-                        offline or online + offline. If you
-                        have any questions, please read this section or contact us directly.</p>
-                </div>
-                <div class="about__btn">
-                    <div class="btn__choice">
-                        <span><a href="#pricing" class="btn__select__course">Select a Course</a>
-                        </span>
-                        <span><a href="#" class="btn__contact">Contact Us</a></span>
-                    </div>
+        <div class="about__our__inner">
+            <div class="about__course__info">
+                <p class="little__title">FAQ</p>
+                <h2 class="about__title">ABOUT OUR COURSES</h2>
+                <div class="shot__line"></div>
+                <p class="about__course__time">We run our courses approximately once in 2-3 months, so be sure to
+                    apply
+                    in
+                    advance.</p>
+                <p class="about__course__group">Our groups consist of 5-10 people on average. Most courses are held
+                    offline or online + offline. If you
+                    have any questions, please read this section or contact us directly.</p>
+            </div>
+            <div class="about__btn">
+                <div class="btn__choice">
+                    <span><a href="#pricing" class="btn__select__course">Select a Course</a>
+                    </span>
+                    <span><a href="#" class="btn__contact">Contact Us</a></span>
                 </div>
             </div>
-            <div class="panell"></div>
-            <!--accordion-->
-            <div class="info__about__course">
-                <div class="accordion__about">
-                    <div class="accordion__about__item">
-                        <input class="accordion__item__input" type="radio" name="accordion" id="accordion-1">
-                        <label class="accordion__triger" for="accordion-1">
-                            WHO ARE THESE COURSES FOR?
-                        </label>
-                        <div class="accordion__about__content">
-                            <p>We have different courses designed for beginners and
-                                professionals. It all depends on your skills and needs.
-                            </p>
-                        </div>
+        </div>
+        <div class="panell"></div>
+        <!--accordion-->
+        <div class="info__about__course">
+            <div class="accordion__about">
+                <div class="accordion__about__item">
+                    <input class="accordion__item__input" type="radio" name="accordion" id="accordion-1">
+                    <label class="accordion__triger" for="accordion-1">
+                        WHO ARE THESE COURSES FOR?
+                    </label>
+                    <div class="accordion__about__content">
+                        <p>We have different courses designed for beginners and
+                            professionals. It all depends on your skills and needs.
+                        </p>
                     </div>
-                    <hr>
-                    <div class="accordion__about__item">
-                        <input class="accordion__item__input" type="radio" name="accordion" id="accordion-2">
-                        <label class="accordion__triger" for="accordion-2">
-                            DO I NEED TO BUY AN ESPRESSO MACHINE TO STUDY?
-                        </label>
-                        <div class="accordion__about__content">
-                            <p>A good coffee machine is a must for everyone who wants to make delicious coffee. Still,
-                                during the courses, you'll use our equipment, so you don't need to buy anything to
-                                study.
-                            </p>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="accordion__about__item">
-                        <input class="accordion__item__input" type="radio" name="accordion" id="accordion-3">
-                        <label class="accordion__triger" for="accordion-3">
-                            DO YOU TEACH NEW WAYS OF BREWING COFFEE?
-                        </label>
-                        <div class="accordion__about__content">
-                            <p>Yes, you can master new techniques of brewing on our Advanced Barista Course.</p>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="accordion__about__item">
-                        <input class="accordion__item__input" type="radio" name="accordion" id="accordion-4">
-                        <label class="accordion__triger" for="accordion-4">
-                            WHAT IF I DECIDE TO QUITE IN THE MIDDLE OF THE COURSE?
-                        </label>
-                        <div class="accordion__about__content">
-                            <p>If your plans change before the start of the course, you get your money back. But, in
-                                case of any changes when the course has already started, you can only switch to another
-                                course.</p>
-                        </div>
-                    </div>
-                    <hr>
                 </div>
+                <hr>
+                <div class="accordion__about__item">
+                    <input class="accordion__item__input" type="radio" name="accordion" id="accordion-2">
+                    <label class="accordion__triger" for="accordion-2">
+                        DO I NEED TO BUY AN ESPRESSO MACHINE TO STUDY?
+                    </label>
+                    <div class="accordion__about__content">
+                        <p>A good coffee machine is a must for everyone who wants to make delicious coffee. Still,
+                            during the courses, you'll use our equipment, so you don't need to buy anything to
+                            study.
+                        </p>
+                    </div>
+                </div>
+                <hr>
+                <div class="accordion__about__item">
+                    <input class="accordion__item__input" type="radio" name="accordion" id="accordion-3">
+                    <label class="accordion__triger" for="accordion-3">
+                        DO YOU TEACH NEW WAYS OF BREWING COFFEE?
+                    </label>
+                    <div class="accordion__about__content">
+                        <p>Yes, you can master new techniques of brewing on our Advanced Barista Course.</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="accordion__about__item">
+                    <input class="accordion__item__input" type="radio" name="accordion" id="accordion-4">
+                    <label class="accordion__triger" for="accordion-4">
+                        WHAT IF I DECIDE TO QUITE IN THE MIDDLE OF THE COURSE?
+                    </label>
+                    <div class="accordion__about__content">
+                        <p>If your plans change before the start of the course, you get your money back. But, in
+                            case of any changes when the course has already started, you can only switch to another
+                            course.</p>
+                    </div>
+                </div>
+                <hr>
             </div>
         </div>
     </section>
