--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             </div>
             <div class="header__nav">
                 <nav class="nav__links">
-                    <!--change links-->
-                    <ul class="header__list">
+                     <ul class="header__list">
                         <li>
                             <span>
                                 <a class="nav__link" href="#about__us">About us</a>
@@ -99,7 +98,7 @@
         </div>
         <div class="header__container">
             <div class="under__header-coffee-lab">
-                coffee lab
+                Coffee lab
             </div>
             <div class="under__header">
                 <h1>COFFEE LAB SCHOOL</h1>
