Added text in section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="header__nav">
                 <nav class="nav__links">
-                     <ul class="header__list">
+                    <ul class="header__list">
                         <li>
                             <span>
                                 <a class="nav__link" href="#about__us">About us</a>
@@ -599,16 +599,40 @@
     <!--Olena Tarasova -->
     <!-- Yevhen Ostrovskyi-->
     <section class="what__our__students__say" id="testmonials">
-        <div class="testimonials">
-            <p class="little__title">Testimonials</p>
-        </div>
-        <div class="what__students__say">
-            <h2>WHAT OUR STUDENTS SAY</h2>
-        </div>
-        <div class="happy__review">
-            <p>We are happy with each review you leave.</p>
+        <div>
+            <div class="what__students__say__inner">
+                <p class="little__title">Testimonials</p>
+                <h2 class="what__students__say about__title">WHAT OUR STUDENTS SAY</h2>
+                <p class="happy__review about__course__time">We are happy with each review you leave.</p>
+            </div>
+            <div class="what__say__carusel">
+                <div class="what__say__card">
+                    <div class="what__say__card__icon"></div>
+                    <div class="what__say__card__name">JOHN JELLY</div>
+                    <div class="what__say__card__course">Coffee Enthusiast</div>
+                    <div class="what__say__content">“I am the kind of person that can sing odes to coffee. At the
+                        course, I learned to make the perfect coffee at home, so now I have no reason to leave it at
+                        all. I can't even count how much money I’m saving on coffee-to-go every day!”</div>
+                        <div class="what__say__data">December 15, 2021</div>
+                </div>
+                <div class="what__say__card">
+                    <div class="what__say__card__icon"></div>
+                    <div class="what__say__card__name">MARY WOLLEN</div>
+                    <div class="what__say__card__course">Barista</div>
+                    <div class="what__say__content">“I was so happy to study at CoffeeLab. They know how to work with poor learners and find the best approach to them. Sure, I still have many tricks to learn, but this school gave me basic skills that I use every day at work.”</div>
+                        <div class="what__say__data">March 15, 2021</div>
+                </div>
+                <div class="what__say__card">
+                    <div class="what__say__card__icon"></div>
+                    <div class="what__say__card__name">LILLY BLUES</div>
+                    <div class="what__say__card__course">Bar Owner</div>
+                    <div class="what__say__content">“It changed the way I'm doing my business. The courses gave me the management basics for my own coffee bar and the community gave the best baristas. Running my coffee place is now such a pleasure.”</div>
+                        <div class="what__say__data">November 22, 2021</div>
+                </div>
+            </div>
         </div>
     </section>
+
 
     <!-- Tetyana Pasecnhyk-->
     <section class="about__our__courses" id="contacts">
