Formed footer links

--- a/index.html
+++ b/index.html
@@ -714,17 +714,11 @@
 
     <!-- Harasym Nazar-->
     <footer>
-        <section class="contacts">
-            <div>
+        <link rel="stylesheet" href="css/index.css">
                 <h3>Write us</h3>
                 <h2>Contacts</h2>
-            </div>
-            <div>
                 <a href="number" class="button">+1(234) 567 89 00</a>
-            </div>
-            <div>
                 <a href="mail" class="button">coffeelab@emal.com</a>
-            </div>
         </section>
         <section class="contact__input">
             <form action="" method="">
@@ -758,17 +752,17 @@
         </section>
         <section class="underlines">
             <div>
-                <a href="main-page" class="button">
+                <a href="main-page" class="ending__links">
                     <h2>COFFEE LAB SCHOOL</h2>
                     <p>MASTER YOUR COFFEE SKILLS</p>
                 </a>
             </div>
-            <a href="about us" class="button">About us</a>
-            <a href="courses" class="button">Courses</a>
-            <a href="prising" class="button">Prising</a>
-            <a href="recipes" class="button">Recipies</a>
-            <a href="testimonials" class="button">Testimonials</a>
-            <a href="blog" class="button">Blog</a>
+            <a href="about us" class="ending__links">About us</a>
+            <a href="courses" class="ending__links">Courses</a>
+            <a href="prising" class="ending__links">Prising</a>
+            <a href="recipes" class="ending__links">Recipies</a>
+            <a href="testimonials" class="ending__links">Testimonials</a>
+            <a href="blog" class="ending__links">Blog</a>
 
 
         </section>
