changes in pricing
 added div, added class for ul, fixed missprint

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             </span>
                         </li>
                         <li>
-                            <a class="nav__link" href="#prising">Prising</a>
+                            <a class="nav__link" href="#pricing">Pricing</a>
                         </li>
                         <li>
                             <span>
@@ -460,77 +460,79 @@
                 </p>
             </div>
             <article class="about__course">
-                <h4 class="about__course__header">
-                    LATTE ART COURSE
-                </h4>
-                <span class="about__course__price">
-                    $150 | 5 days
-                </span>
-                <ul>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> For all coffee fans;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Offline lessons only;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> All materials included;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> 8 hours of training;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Easy to repeat at home;</li>
-                </ul>
-                <button>
-                    Select Course
-                </button>
-            </article>
-            <article class="about__course">
-                <h4 class="about__course__header">
-                    BARISTA LICENSE COURSE
-                </h4>
-                <span class="about__course__price">
-                    $365 | 23 days
-                </span>
-                <ul>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> For beginners;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> 50+ hours of training;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Classic drinks;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Interships included;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> A certificate is issued;</li>
-                </ul>
-                <button>
-                    Select Course
-                </button>
-            </article>
-            <article class="about__course">
-                <h4 class="about__course__header">
-                    ADVANCED BARISTA COURSE
-                </h4>
-                <span class="about__course__price">
-                    $350 | 14 days
-                </span>
-                <ul>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> For proffessionals;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Online and offline;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Proffessional equipment;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Coffee roasting details;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Alternative brewing;</li>
-                </ul>
-                <button>
-                    Select Course
-                </button>
-            </article>
-            <article class="about__course">
-                <h4 class="about__course__header">
-                    COFFEE LAKE A PRO AT HOME
-                </h4>
-                <span class="about__course__price">
-                    $150 | 5 days
-                </span>
-                <ul>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> For beginners;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Classic recipes;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Secret tips;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Making lush milk foam;</li>
-                    <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> 10 hours of training;</li>
-                </ul>
-                <button>
-                    Select Course
-                </button>
-            </article>
+                <div class="about__course__container">
+                    <h4 class="about__course__header">
+                        LATTE ART COURSE
+                    </h4>
+                    <span class="about__course__price">
+                        $150 | 5 days
+                    </span>
+                    <ul class="list__about__course">
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> For all coffee fans;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Offline lessons only;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> All materials included;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> 8 hours of training;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Easy to repeat at home;</li>
+                    </ul>
+                    <button>
+                        Select Course
+                    </button>
+                </article>
+                <article class="about__course">
+                    <h4 class="about__course__header">
+                        BARISTA LICENSE COURSE
+                    </h4>
+                    <span class="about__course__price">
+                        $365 | 23 days
+                    </span>
+                    <ul class="list__about__course">
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> For beginners;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> 50+ hours of training;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Classic drinks;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Interships included;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> A certificate is issued;</li>
+                    </ul>
+                    <button>
+                        Select Course
+                    </button>
+                </article>
+                <article class="about__course">
+                    <h4 class="about__course__header">
+                        ADVANCED BARISTA COURSE
+                    </h4>
+                    <span class="about__course__price">
+                        $350 | 14 days
+                    </span>
+                    <ul class="list__about__course">
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> For proffessionals;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Online and offline;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Proffessional equipment;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Coffee roasting details;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Alternative brewing;</li>
+                    </ul>
+                    <button>
+                        Select Course
+                    </button>
+                </article>
+                <article class="about__course">
+                    <h4 class="about__course__header">
+                        COFFEE LAKE A PRO AT HOME
+                    </h4>
+                    <span class="about__course__price">
+                        $150 | 5 days
+                    </span>
+                    <ul class="list__about__course">
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> For beginners;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Classic recipes;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Secret tips;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Making lush milk foam;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> 10 hours of training;</li>
+                    </ul>
+                    <button>
+                        Select Course
+                    </button>
+                </article>
+               </div> 
         </section>
 
 
