some changes in prising

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         <!--Olena Tarasova -->
         <section class="our__pricing__plans">
             <div class="our__pricing__plans__block">
-                <p class="prising">
+                <p class="pricing">
                     Pricing
                 </p>
                 <h3 class="our__pricing__plans__header" id="pricing">
@@ -459,8 +459,8 @@
                     Learn more about the price and program of each corse we offer
                 </p>
             </div>
-            <article class="about__course">
-                <div class="about__course__container">
+            <div class="about__course__container">
+                <article class="about__course">
                     <h4 class="about__course__header">
                         LATTE ART COURSE
                     </h4>
