add section making

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
         <!-- Natalia Danylovych -->
         <section class="master-coffe-making" id="about__us">
-            <div class="masrer_making_img">
+            <div class="master_making_img">
                 <img class="image__making" src="img/master_coffee_making.png" alt="image__making">
             </div>
             <div class="column__making-coffee">
@@ -202,7 +202,7 @@
                 <h3 class="h3_master_coffee_making">PROFESSIONAL COUSES ARE NOW AVAILABLE FOR ALL COFFEE FANS IN NEW
                     YORK</h3>
                 <hr class="hr_logo_making">
-                <p class="p_making_coffee_fonts">Coffee Lab School is an educational playground for people who cast
+                <p class="p_making_coffee_fonts_h3">Coffee Lab School is an educational playground for people who cast
                     their lot with coffee. If you own
                     a coffee shop, work as a barista, or you’re just a coffee fan, it is a place where you can learn
                     even more about this hot and energizing drink</p>
